--- a/tech/timer.scss
+++ b/tech/timer.scss
@@ -4,12 +4,12 @@ body {
 
 .timer-wrap {
   text-align: center;
-  padding: 16px;
+  padding: 8px;
   input, button {
     width: 100px;
     margin-left: 16px;
     text-align: center;
-    font-size: xx-large;
+    font-size: x-large;
   }
 }
 
